2008-07-23  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUnusedPrivateFieldsTest.cs: Modify test cases to ignore
	literals. Remove Ignore from generic test since DefinitionLoader was
	fixed (the problem was not related to mono).

2008-07-13  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidLargeNumberOfLocalVariablesTest.cs: New. Unit tests
	for AvoidLargeNumberOfLocalVariablesRule.

2008-07-12  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUnusedPrivateFieldsTest.cs: New. Unit tests for 
	AvoidUnusedPrivateFieldsRule. There is a bug that prevent from
	running the generic test on mono (needs more investigation) but
	the rule itself works.

2008-07-05  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidRepetitiveCastsTest.cs: New. Unit tests for 
	AvoidRepetitiveCastsRule.
	* Test.Rules.Performance.mdp: Update MD project file.

2008-06-28  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidLargeStructureTest.cs: Add test case for arrays.

2008-06-27  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidTypeGetTypeForConstantStringsTest.cs: New. Unit tests for
	AvoidTypeGetTypeForConstantStringsRule.
	* Test.Rules.Performance.mdp: Update MD project file.

2008-06-11  Jb Evain  <jbevain@novell.com>

	* AvoidUninstantiatedInternalClassesTest.cs: add tests for
	the sealed + private ctor case, and abstract + private ctor case.

2008-06-04  Sebastien Pouliot  <sebastien@ximian.com>

	* ConsiderCustomAccessorsForNonVisibleEventsTest.cs: New. Unit
	tests for ConsiderCustomAccessorsForNonVisibleEventsRule.
	* Test.Rules.Performance.mdp: Update MD project file.

2008-05-19  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUnneededUnboxingTest.cs: New. Unit tests for 
	AvoidUnneededUnboxingRule

2008-05-17  Sebastien Pouliot  <sebastien@ximian.com>

	* RemoveUnusedLocalVariablesTest.cs: New. Unit tests for
	RemoveUnusedLocalVariablesRule. A bit limited since it depends
	on the compiler removing (or not) the unused variables.
