@@ -1,3 +1,9 @@
+2008-07-26  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* AvoidUncalledPrivateCodeTest.cs: Add test case for detected 
+	unused properties (Marek Safar) and add another test case for 
+	generics (Richard Birkby)
+
 2008-07-23  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* AvoidUnusedPrivateFieldsTest.cs: Modify test cases to ignore
